// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unknown builtin property access: code 1`] = `
"local ____exports = {}
____exports.__result = Math.unknownProperty
return ____exports"
`;

exports[`Unknown builtin property function call: code 1`] = `
"local ____exports = {}
____exports.__result = ({}):unknownFunction()
return ____exports"
`;
